--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,61 +1,51 @@
-.footer{
+footer {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap; 
-    padding: 1rem;
-    text-align: center;
-    margin-right: 7rem;
-
-    &__redes__uno{
-      width: 15rem;
-      height: 8rem;
-      }    
-    &__redes__dos{
-      width: 8rem;; 
-      height: 7.5rem;
-      }   
-    &__texto{
-      font-style: italic;
-      }
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;      
+    padding-top: 1rem;
+    
         
-     }
-
- @media (min-width:541px) and (max-width:720px){ 
-  .footer{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; 
-    justify-content: space-between;   
-    padding: 2.5rem;
-    text-align: center;
-    margin-top: 1.5rem; 
-    margin-right: 3rem;  
-      &__redes__uno {
-        width: 20vw;
-        height: 7vh;
-        }
-      &__redes__dos {
-        width: 12vw;
-        height:7vh;
-        }
-    } 
-   }
-
-  @media (min-width:320px) and (max-width:540px){   
-  
-    .footer{
-      padding: 0.5rem;
-      margin-left: 0.5rem;
-      margin-right: 2rem;
-
-      &__redes__uno{
-        width: 20vw;
-        height: 5vh;
-        }
-      &__redes__dos{
-        width: 12vw;
-        height: 5vh;
-        }
-      }  
-
   }
+  
+  .redes-footer {
+    display: flex;
+    flex-direction: row;
+   }
+  
+  .redes-footer a {
+    margin: 1rem;
+  }
+  
+  .facebook{
+    width: 3.5rem;
+    height: 2rem ;
+  }
+  .instagram{
+    width: 2.5rem;
+    height: 2rem;
+  
+  }
+  
+  .navegador-footer {
+    background-color:rgb(48, 68, 56) ;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center;
+    margin-top: 1rem;  
+  }
+  
+  .navegador-footer span a {
+    color:white;
+    font-size: 1rem;
+    border-left: 0.10rem solid white;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    transition: all 0.5s ease;  
+  }
+  
+  .navegador-footer span a:hover {
+    padding: 0.5rem;
+  }
+  
