--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,14 @@
 $color-body:rgb(48, 68, 56);
 $color-tablet:rgba(99, 61, 36, 0.795);
 $color-celular:rgba(41, 29, 75, 0.795);
-$color-navegacion:white;
 $color-p: white;
 $color-h1:white;
+$color-h2:white;
+$color-btn:black;
 $font-family-body:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $font-size-h1: 3rem;
-$font-size-navegador:2rem;
-$font-size-p:2.5rem;
+$font-size-navegador:0.2rem;
+$font-size-p:1.5rem;
 $font-size-link:2rem;
 $ancho:15rem;
 $alto:7.5rem;
