--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -1,58 +1,200 @@
- .container__actitud{
-    margin-top: 2rem;
+.actitudTituloh2{
+  margin-left: 25rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.container-fluid1{
+  width: 40rem;
+  height: 20rem;
+}
+
+
+.container__actitud1 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25rem;
+  gap: 2rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding-bottom: 0.10rem;
+  margin-left: 5rem;
+  margin-right: 5rem; }
+
+.grid__container__actitud1 .grid__uno {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  
+.grid__container__actitud1 .grid__uno {
+  
+    grid-row: 1/1;
+    grid-column: 2/3;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+
+.container__actitud2{
+    margin-left: 4rem;
+    margin-right: 4rem;
     padding-bottom: 2rem;
-    
-    .container__texto1{
-      font-size: 1.50rem;
-      color:white;
-      }
     }
+.actitudTituloh3{
+   color:white ;
+   margin-left: 25rem;
+}
+.actitud__texto{
+  font-size: 1.50rem;
+ }
+
+.container__actitud3{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 30rem;
+  gap: 2rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding-top: 2rem;
+  padding-bottom: 0.10rem;
+  margin-left: 5rem;
+  margin-right: 5rem; }
+
    
-  .portada__textoActitud{
-    margin-left:18%;
-    padding-right: 2rem;
-    padding-top: 2rem;
 
-    .texto__actitud {
-       margin-left: 5%;
-       font-size: 2.5rem;
-       color:white;
-       }
-
-    .ul___actitud{
-        font-size:2rem ;
-        color: white;
-        } 
+.grid__container__actitud3 .grid__uno {
+    grid-row: 1/2;
+    grid-column: 1/2;
      }
 
-@media (min-width:541px) and (max-width:720px){  
+.grid__container__actitud3 .grid__dos {
+      grid-row: 1/2;
+      grid-column: 2/3;
+     }  
+ 
 
-  .portada__textoActitud{
-      margin-left: 1rem;
-        .texto__actitud{
-          font-size: 2rem;
-          } 
-        .ul___actitud{
-          font-size:1.75rem ;
-          }    
-      }
-   }
-
- @media (min-width:320px) and (max-width:540px){   
-   
-  .portada__textoActitud{
-    margin-left: 1rem;
-      .texto__actitud{
-        font-size: 2rem;
-        }
-      .ul___actitud{
-          font-size:1.75rem ;
-          }     
-      }
-
+@media (min-width: 541px) and (max-width: 720px) {
+  .actitudTituloh2{
+    margin-left: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
-
-
   
+  .container-fluid1{
+  width: 33rem;
+  height: 10rem;
+  }
+  
+  
+  .container__actitud1 {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 25rem 25rem;
+    gap: 0.5rem;
+    margin-left: 2rem;
+    margin-right: 2rem; }
+  
+  .grid__container__actitud1 .grid__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+       }
+    
+  .grid__container__actitud1 .grid__uno {
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
+  
+  .container__actitud2{
+      margin-left: 2rem;
+      margin-right: 2rem;
+      padding-bottom: 2rem;
+      }
+
+
+  .actitudTituloh3{
+     color:white ;
+     margin-left: 5rem;
+  }
+  .actitud__texto{
+    font-size: 1.50rem;
+   }
+  .container__actitud3{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 25rem;
+    gap: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 0.10rem;
+    margin-left: 2rem;
+    margin-right: 2rem; }
   
  
+    
+  .grid__container__actitud3 .grid__item .grid__dos {
+    
+      grid-row: 1/2;
+      grid-column: 1/1;
+       }
+ .grid__container__actitud3 .grid__item.grid__uno {
+        grid-row: 2/3;
+        grid-column: 1/1;
+      }
+
+  
+  }
+@media (min-width: 320px) and (max-width: 540px) {
+  
+  .actitudTituloh2{
+    font-size: 1.4rem;
+    margin-left: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+  
+  .container-fluid1{
+  width: 23rem;
+  height: 10rem;
+  
+  }
+    
+  .container__actitud1 {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 25rem 25rem;
+    gap: 0.5rem;
+    margin-left: 2rem;
+    margin-right: 2rem; }
+  
+  .grid__container__actitud1 .grid__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+       }
+    
+  .grid__container__actitud1 .grid__uno {
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
+  
+  .actitudTituloh3{
+     color:white ;
+     margin-left: 2rem;
+  }
+  .actitud__texto{
+    font-size: 1.50rem;
+   }
+  .container__actitud3{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 25rem;
+    gap: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 0.10rem;
+    margin-left: 2rem;
+    margin-right: 2rem; }
+      
+  
+  } 
+
