--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,144 +1,118 @@
-  .portada__textoGaleria{
-    padding: 2rem;
-    margin-left: 30%;
-     .texto__galeria{
-      font-size: 3rem;
-      }
-    }
+.galeriaTituloh2{
+  padding: 2rem;
+  margin-left: 30%; }
 
-  .grid__container__1galeria{
-    display:grid;
-    grid-template-columns: 1fr, 1fr, 1fr;
-    grid-template-rows: 15rem 15rem 15rem 15rem;
-    grid-template-areas:"uno dos tres" 
-                         "uno cuatro cinco"
-                         "seis cuatro ocho"
-                         "seis cuatro ocho";
-    gap: 1rem;
-    margin-left: 10rem;
-    margin-right: 10rem;
+ .portada__textoGaleria .texto__galeria {
+    font-size: 3rem; }
 
-  
-    .grid__seis {
-        grid-area: uno;
-        background-image:url("../recursos/edificio__3.jpg") ;;
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__siete {
-        grid-area: dos;
-        background-image: url("../recursos/edificio__4.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__ocho{
-        grid-area: tres;
-        background-image: url("../recursos/edificio__5.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__nueve{
-        grid-area: cuatro;
-        background-image: url("../recursos/edificio__6.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__diez{
-        grid-area: cinco;
-        background-image: url("../recursos/edificio__7.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__once{
-        grid-area: seis;
-        background-image: url("../recursos/edificio__8.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-    
-    .grid__doce{
-        grid-area: seis;
-        background-image: url("../recursos/edificio__9.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-       }
-    
-    .grid__trece{
-        grid-area: ocho;
-        background-image: url("../recursos/edificio__10.jpg");
-        background-position: inherit;
-        background-size: cover;
-        background-repeat: no-repeat;
-        }
-   }
+.grid__container__galeria {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr;
+  grid-template-rows: 15rem 15rem 15rem 15rem;
+  grid-template-areas: "uno dos tres" 
+ "uno cuatro cinco"
+ "seis cuatro ocho"
+ "seis cuatro ocho";
+  gap: 1rem;
+  margin-left: 5rem;
+  margin-right: 5rem; }
+  .grid__container__galeria .grid__uno {
+    grid-area: uno;
+    background-image: url("../recursos/edificio__3.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__dos {
+    grid-area: dos;
+    background-image: url("../recursos/edificio__4.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__tres {
+    grid-area: tres;
+    background-image: url("../recursos/edificio__5.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__cuatro {
+    grid-area: cuatro;
+    background-image: url("../recursos/edificio__6.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__cinco {
+    grid-area: cinco;
+    background-image: url("../recursos/edificio__7.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__seis {
+    grid-area: seis;
+    background-image: url("../recursos/edificio__8.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__siete {
+    grid-area: seis;
+    background-image: url("../recursos/edificio__9.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .grid__container__galeria .grid__ocho {
+    grid-area: ocho;
+    background-image: url("../recursos/edificio__10.jpg");
+    background-position: inherit;
+    background-size: cover;
 
-@media (min-width:541px) and (max-width:720px){ 
-  
-  .portada__textoGaleria{
-    padding:1rem;
-    margin-left: 1rem;
+    background-repeat: no-repeat; }
 
-    .texto__galeria{
-      font-size: 3rem;
-      margin-left: 3rem;
-      }
-    }
- 
-  .grid__container__1galeria{
-    display:grid;
+.linkContactoTexto {
+      padding-bottom: 2rem;
+      margin-left: 5rem;
+       }  
+.btn {
+      margin-left: 10rem; }
+
+
+@media (min-width: 541px) and (max-width: 720px) {
+    .grid__container__galeria {
+    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem;
-    border: 0.1rem solid rgb(15, 1, 15);
+    border: 0.1rem solid #0f010f;
     grid-template-areas: "uno dos"
-                             "tres cuatro"
-                             "cinco seis"
-                             "ocho seis";
+ "tres cuatro"
+ "cinco seis"
+ "ocho seis";
     gap: 0.5rem;
     margin-left: 1rem;
-    margin-right: 1rem;
-    } 
-  }
+    margin-right: 1rem; } }
 
- @media (min-width:320px) and (max-width:540px){   
-   
-    
-  .portada__textoGaleria{
-    padding:1rem;
-    margin-left: 2.5rem;
-
-    .texto__galeria {
-      font-size: 1.5rem;
-      margin-left: 2.5rem;
-      }     
-    }
+@media (min-width: 320px) and (max-width: 540px) {
+  .galeriaTituloh2{
+    font-size: 1.5rem;
+    padding: 2rem;
+    margin-left: 2rem }
   
-    
-  .grid__container__1galeria{
-    display:grid;
+
+    .grid__container__galeria {
+    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem 15rem 15rem 15rem;
     grid-template-areas: "uno" 
-                         "dos"
-                         "tres"
-                         "cuatro"
-                         "cinco"
-                         "seis"
-                         "ocho";
+ "dos"
+ "tres"
+ "cuatro"
+ "cinco"
+ "seis"
+ "ocho";
     gap: 0.5rem;
     margin-left: 3rem;
-    margin-right: 2rem;
-    }  
-      
+    margin-right: 2rem; } 
+  
+ .GaleriaLinkContactoTexto {
+      font-size: 1rem;
+      padding-bottom: 2rem;
+      margin-left: 2rem;
+       }   
   }
