--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,61 +1,82 @@
-.grid__container__1nosotros{
+.nosotrosTituloh2{
+  text-align: center;
+  color: white;
+  padding: 2rem;
+  }
+.nosotrosTituloh3{
+    text-align: center;  
+    color: white;
+    padding: 1rem;
+    }
+.nosotrosTituloh4{
+     color: white;
+      } 
+
+.grid__container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
-    grid-template-rows: 15rem 15rem 15rem 13rem;
-    gap: 1rem;
+    grid-template-rows: 25rem 25rem 10rem;
+    gap: 2rem;
     justify-content: center;
     align-content: center;
     background-position: center;
+    padding-top: 3rem;
     padding-bottom: 0.10rem;
-    margin-left: 8rem;
-    margin-right: 8rem;
-    .text-container {
+    margin-left: 5rem;
+    margin-right: 5rem;
+      }
+
+.text-container {
         width: 100%;
         background: #00000099;
         text-align: center;
         }
-    .grid__texto{
+.grid__texto{
         font-size: 2rem;
         color: white;
         }
-    .grid__texto1{
+.grid__texto1{
          font-size:1.5rem ;
          }   
    
-   .grid__uno{
-      grid-row: 1/3;
+.grid__container__nosotros1  .grid__uno{
+      grid-row: 1/2;
+      grid-column: 1/2;
       background-image: url("../recursos/Nosotros 1.jpg");
       background-position: inherit;
       background-size: cover;
       background-repeat: no-repeat;
       } 
   
-   .grid__dos{
+.grid__container__nosotros1  .grid__dos{
       grid-row: 1/2;
+      grid-column: 2/3;
       background-image: url("../recursos/Nosotros 2.jpg");
       background-position: inherit;
       background-size: cover;
       background-repeat: no-repeat;
       }
         
-   .grid__tres{
-      grid-row: 3/4;
+.grid__container__nosotros1 .grid__tres{
+      grid-row: 2/3;
+      grid-column: 1/2;
       background-image: url("../recursos/Nosotros 3.jpg");
       background-position: inherit;
       background-size: cover;
       background-repeat: no-repeat;
       }
         
-   .grid__cuatro{
-      grid-row: 2/4;
+.grid__container__nosotros1  .grid__cuatro{
+      grid-row: 2/3;
+      grid-column: 2/3;
       background-image: url("../recursos/Nosotros 4.jpg");
       background-position: inherit;
       background-size: cover;
       background-repeat: no-repeat;
       }
         
-   .grid__cinco{
-      grid-row: 4/5;
+.grid__container__nosotros1 .grid__cinco{
+      grid-row: 3/4;
       grid-column: 1/3;
       display:flex;
       flex-direction:column;
@@ -63,38 +84,98 @@
       align-content: stretch;
       }
 
-  }  
+   
 
-  .grid__container__2nosotros{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    background-position: center;   
-    margin-left: 5rem;
-    margin-right: 3rem;
-      .portada__textoNosotros{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;  
-        font-size:1.5rem ;
-        padding: 2rem;
-        color: white;
-      }
+.grid__container__nosotros2{
+        display:grid;
+        grid-template-columns:50% 50%;
+        grid-template-rows: 20rem 20rem 10rem;
+        gap: 2rem;
+        justify-content: center;
+        align-content: center;
+        background-position: center;
+        padding-bottom: 0.10rem;
+        margin-left: 5rem;
+        margin-right: 5rem;
+          }
+.grid__container__nosotros2.grid__uno{
+            grid-row: 1/2;
+            grid-column: 1/2;
+            background-position: inherit;
+            background-size: cover;
+            background-repeat: no-repeat;
+            } 
+.grid__container__nosotros2  .grid__dos{
+              grid-row: 1/2;
+              grid-column: 2/3;
+              background-image: url("../recursos/nosotros_5.png");
+              background-position: inherit;
+              background-size: cover;
+              background-repeat: no-repeat;
+              }
+.grid__container__nosotros2 .grid__tres{
+                grid-row: 2/3;
+                grid-column: 1/2;
+                background-image: url("../recursos/nosotros_6.png");
+                background-position: inherit;
+                background-size: cover;
+                background-repeat: no-repeat;
+  }
+
+.grid__container__nosotros2  .grid__cuatro{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
     }
- .p__link{   
-      font-size:1.75rem;
-      :hover{
-        color:aqua
-        }
+.grid__container__nosotros2  .grid__cinco .p__link{
+      grid-row: 3/4;
+      grid-column: 1/3;
+      background-image: url("../recursos/caphai.png");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
       }
-    
+
+
+       
+.p__link{   
+      width: 25rem;
+      height: 7rem;
+      margin-left: 25rem ;
+      }
+
+
+.linkContactoTexto{
+        font-size: 1.5rem;
+        padding-bottom: 2rem;
+        margin-left: 1rem;
+        text-align: center;
+      }
+      
+.btn{
+        background-color: white;
+        font-size: 2rem;
+        padding: 0.75rem;
+        border-radius: 1.5rem;
+        margin-left:40rem;
+         }
+      
+.btn:hover {  
+        transform: scale(1.25);
+        background-color:aquamarine;
+        }
+      
+.boton{
+        color: black;
+        }
     
 @media (min-width:541px) and (max-width:720px){
-  .grid__container__1nosotros{
+  .grid__container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
-    grid-template-rows: 6rem 6rem 6rem 16rem;
+    grid-template-rows: 20rem 20rem 15rem;
     gap: 0.25rem;
     margin-left: 2rem;
     margin-right: 2rem;
@@ -108,57 +189,141 @@
   .grid__texto1{
      font-size:1.5rem;
      } 
-
-  .p__link{   
-     font-size:1.75rem;
-     }
-  }
-  
-@media (min-width:320px) and (max-width:540px){   
-
-  .grid__container__1nosotros{
-    display:grid;
-          /*border: 0.1rem solid violet;*/
-    grid-template-columns:50% 50%;
-    grid-template-rows: 6rem 6rem 6rem 14rem;
-    gap: 0.25rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 1rem;
-
-    .grid__texto{
-      font-size:1rem;
-      }  
-
-    .grid__texto1{
-      font-size:1.20rem;
-      }
-    }
-
-    .grid__container__2nosotros{
-      display: flex;
-      align-items: center;
+  .grid__container__nosotros2{
+      display:grid;
+      grid-template-columns:50% 50%;
+      grid-template-rows: 25rem 35rem 10rem;
+      gap: 2rem;
       justify-content: center;
       align-content: center;
       background-position: center;
-      margin-top: 2rem;
-      margin-left: 0.1rem;
-      margin-right: 1rem;
-      font-size: 1rem;
-      }
+      padding-bottom: 0.10rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+        }
   
-    .portada__textoNosotros{
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap; /* convierte en responsive*/  
-      font-size:1.5rem ;
+  }
+
+  .p__link{   
+        margin-left: 7rem ;
+    }
+
+ .linkContactoTexto{
+      font-size: 1.5rem;
+      margin-left: 1rem;
+      text-align: center;
+    }
+
+  
+@media (min-width:320px) and (max-width:540px){   
+
+  .grid__container__nosotros1{
+    display:grid;
+    grid-template-columns:50% 50%;
+    grid-template-rows: 20rem 20rem 20rem;
+    gap: 0.25rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+       }
+
+    .grid__texto{
+      font-size: 1.5rem;
+     
       }
 
-    .p__link{   
+    .grid__texto1{
       font-size:1.5rem;
       }
-      
-  }
+    
+
+    .grid__container__nosotros2{
+      display:grid;
+      grid-template-columns:100% ;
+      grid-template-rows: 25rem 20rem 25rem 20rem 5rem;
+      gap: 1rem;
+      justify-content: center;
+      align-content: center;
+      background-position: center;
+      padding-bottom: 0.10rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
+        }
   
+    .grid__container__nosotros2.grid__uno{
+          grid-row: 1/2;
+          grid-column: 1/1;
+          background-position: inherit;
+          background-size: cover;
+          background-repeat: no-repeat;
+          } 
+    .grid__container__nosotros2  .grid__dos{
+            grid-row: 2/3;
+            grid-column: 1/1;
+            background-image: url("../recursos/nosotros_5.png");
+            background-position: inherit;
+            background-size: cover;
+            background-repeat: no-repeat;
+            }
+    .grid__container__nosotros2  .grid__cuatro{
+              grid-row: 3/4;
+              grid-column: 1/1;
+              background-position: inherit;
+              background-size: cover;
+              background-repeat: no-repeat;
+              }
+    .grid__container__nosotros2 .grid__tres{
+              grid-row: 4/5;
+              grid-column: 1/1;
+              background-image: url("../recursos/nosotros_6.png");
+              background-position: inherit;
+              background-size: cover;
+              background-repeat: no-repeat;
+              }
+
+
+    .grid__container__nosotros2  .grid__cinco .p__link{
+      grid-row: 5/6;
+      grid-column: 1/1;
+      background-image: url("../recursos/caphai.png");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      }
+
+
+     
+  .p__link{   
+    width: 15rem;
+    height: 5rem;
+    margin-left: 5rem ;
+    }
+
+
+  .linkContactoTexto{
+      font-size: 1.5rem;
+      padding-bottom: 2rem;
+      margin-left: 1rem;
+      text-align: center;
+    }
+    
+   .btn{
+      background-color: white;
+      font-size: 2rem;
+      padding: 0.75rem;
+      border-radius: 1.5rem;
+      margin-left:8rem;
+       }
+    
+  .btn:hover {  
+      transform: scale(1.25);
+      background-color:aquamarine;
+      }
+    
+    .boton{
+      color: black;
+      }
+  }
+    
   
   
